# crabeaver

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  design.md  structure.md
src/: App.tsx  app.rs  debug.ts  index.css  main.rs  main.tsx  themes.bundled.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: contributing.md
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101000001_initial.sql  20240102000001_connections_v2.sql  20240103000000_clear_passwords.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: README.md  connections.rs  introspection.rs  language.rs  mcp.rs  mod.rs  query.rs
src-tauri/src/application/commands/: mod.rs
src-tauri/src/commands/: README.md  biometric.rs  connections.rs  connectors.rs  marketplace.rs  mcp.rs  mod.rs  queries.rs  settings.rs  sql_completion.rs  sql_validation.rs  table_details.rs
src-tauri/src/domain/: README.md  capabilities.rs  error.rs  mcp.rs  mod.rs
src-tauri/src/domain/models/: connection.rs  language.rs  mod.rs  query.rs  schema.rs  schema_details.rs  schema_size.rs  session.rs  table_details.rs
src-tauri/src/domain/ports/: database_driver.rs  database_port.rs  language_service.rs  mod.rs
src-tauri/src/infrastructure/: README.md  mod.rs
src-tauri/src/infrastructure/biometric/: mod.rs
src-tauri/src/infrastructure/database/: README.md  mod.rs  postgres.rs  registry.rs
src-tauri/src/infrastructure/database/postgres/: mod.rs
src-tauri/src/infrastructure/database/sqlite/: mod.rs
src-tauri/src/infrastructure/keychain/: mod.rs
src-tauri/src/infrastructure/language/: README.md  mod.rs
src-tauri/src/infrastructure/language/sql/: completion.rs  mod.rs  validation.rs
src-tauri/src/infrastructure/mcp/: auth.rs  clients.rs  mod.rs  server.rs
src-tauri/tests/: disaster.rs  mcp_disaster.rs  mcp_http.rs  sqlite_driver.rs
src/components/: ActivityBar.tsx  ActivityDock.tsx  ActivityMonitor.tsx  ActivityPanelBody.tsx  CacheFooter.tsx  EditorGutter.tsx  EditorTabs.tsx  HotkeysHelp.tsx  LockManagerTab.tsx  McpPanel.tsx  ResizeHandle.tsx  ResultTable.tsx  ResultsPane.tsx  SchemaDetailsTab.tsx  SearchPanel.tsx  SessionManagerTab.tsx  Settings.tsx  SettingsTab.tsx  Sidebar.tsx  SqlEditor.tsx  StatusBar.tsx  TableDetailsTab.tsx  WorkspacesSection.tsx
src/connectors/: types.ts  (+5 more)
(+63 files in other folders)
