[package]
name = "db_ide"
version = "0.1.0"
edition = "2024"

[lib]
name = "db_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
bytes = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 2
