[package]
name = "crabeaver"
version = "0.0.2"
edition = "2024"

[lib]
name = "crabeaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri             = { version = "2", features = ["devtools"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
bytes = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "json", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
sqlparser = { version = "0.53", features = ["visitor"] }
rayon = "1"
axum = "0.7"
rand = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
keyring  = "3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2", features = ["OSX_10_15"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 2
